# omp-dir-agent-profiles

./: AGENTS.md  README.md  SYSTEM_SPEC.md  pyproject.toml  setup.cfg
dir_agent_profile/: __init__.py  __main__.py  cli.py  config.py  interactive.py  models.py  profiles.py
