[metadata]
name = dir-agent-profile
version = 0.1.0
description = Directory-level model role profile manager for Oh My Pi

[options]
packages = dir_agent_profile
python_requires = >=3.9
install_requires =
    PyYAML>=6.0
    questionary>=2.0

[options.entry_points]
console_scripts =
    dir-agent-profile = dir_agent_profile.cli:main
